# nmonLocalLLM

./: .aider.chat.history.md  .aider.input.history  .clinerules  .env.example  .gitignore  ActivateEnv.ps1  README.md  preferences.json  pyproject.toml
.claude/: settings.local.json
Implemented Plans/: Bug Fix Proposals 1.md
LocalLLMCodePrompts/: .progress  Architecture Plan.md  Architecture Plan.md.bak  Architecture Plan.review.md  Implementation Planning Prompt.md  InitialPrompt.md  PromptUpdates.md  aidercommands.md  aidercommands.md.bak  aidercommands.review.md
LocalLLMCodePrompts/Documentation/: Arch_Debug_Pipeline.md  DebugWorkflow.md  Debug_Workflow_Quickstart.md  Generate Aider Commands.md  How to use with Debug data Claude.md  InitialPrompt Explanation.md  LLM-Assisted Development Workflow.md  TechStack.md  nmonInstructions.md  run_aider.md
architecture/: DATA_FLOW.md  INTERFACES.md  architecture.md  callgraph.md  callgraph.mermaid  subsystems.mermaid  xref_index.md
architecture/.archgen_state/: hashes.tsv
architecture/src/nmon/: __init__.py.md  __init__.py.pass2.md  alerts.py.md  alerts.py.pass2.md  app.py.md  app.py.pass2.md  config.py.md  config.py.pass2.md  db.py.md  db.py.pass2.md  gpu_monitor.py.md  gpu_monitor.py.pass2.md  history.py.md  history.py.pass2.md  main.py.md  main.py.pass2.md  ollama_monitor.py.md  ollama_monitor.py.pass2.md
bug_fixes/.bughunt_iter_state/: hashes.tsv
bug_fixes/src/nmon/: __init__.py.iter_log.md  alerts.py  alerts.py.iter_log.md  app.py  app.py.iter_log.md  config.py  config.py.iter_log.md  db.py  db.py.iter_log.md  gpu_monitor.py  gpu_monitor.py.iter_log.md  history.py  (+1 more)
bug_reports/: SUMMARY.md
src/nmon/: __init__.py  alerts.py  app.py  config.py  db.py  gpu_monitor.py  history.py  main.py  ollama_monitor.py
test_gaps/: GAP_REPORT.md
tests/: conftest.py  test_alert_bar.py  test_alerts.py  test_app.py  test_config.py  test_dashboard.py  test_dashboard_view.py  test_db.py  test_gpu_monitor.py  test_history.py  test_llm_monitor.py  test_llm_tab.py  test_llm_view.py  test_main.py  test_ollama_monitor.py  test_power_tab.py  test_power_view.py  test_ring_buffer.py  test_sparkline.py  test_temp_tab.py  test_temp_view.py
(+148 files in other folders)
