[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmon"]

[project]
name = "nmon"
version = "0.1.0"
description = "A Textual-based TUI for monitoring GPU and LLM server resources"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual >= 0.60",
    "nvidia-ml-py >= 12.0",
    "httpx >= 0.27",
    "platformdirs >= 4.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8",
    "pytest-asyncio",
    "pytest-mock",
    "mypy",
    "ruff",
]

[project.scripts]
nmon = "nmon.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
target-version = "py311"
