[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nmon"
version = "0.1.0"
description = "Terminal dashboard for monitoring NVIDIA GPUs and Ollama LLM server"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.7.0",
    "nvidia-ml-py>=12.535.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
nmon = "nmon.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/nmon",
    "--cov-fail-under=100",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nmon"]

[tool.coverage.run]
source = ["src/nmon"]
omit = ["*/tests/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
